New detail view, stubs for the gemcutter REST API, basic auth.
--HG--
rename : config.ru => config.ru.example

--- a/config.ru.example
+++ b/config.ru.example
@@ -9,8 +9,8 @@ logfile = basedir + 'log/sinatra.log'
 
 logfile.dirname.mkpath
 log = logfile.open( 'a' )
-# $stdout.reopen( log )
-# $stderr.reopen( log )
+$stdout.reopen( log )
+$stderr.reopen( log )
 
 Gemserver::App.set :configfile, basedir + 'config.yml'
 run Gemserver::App
