--- a/project.yml
+++ b/project.yml
@@ -2,36 +2,35 @@
 excluded_pkgfiles: 
 - data/gems/
 project_pubdir: http://bitbucket.org/ged/gemserver/downloads
-project_pubhost: ~
+project_pubhost: 
 project_homepage: http://bitbucket.org/ged/gemserver
-gem_pubhost: rubygems.org
+gem_pubhost: rubygems.laika.com
 project_requirements: {}
 
-release_smtphost: mail.faeriemud.org
-project_licenses: 
-- BSD
+release_smtphost: mail.laika.com
 project_description: |-
   This is an experimental minimalist Rubygems index and gem server written in
   Sinatra. It supports pushing via 'gem push', uploading via HTML5 
   drag-and-drop.
-release_mailto: Ruby-Talk List <ruby-talk@ruby-lang.org>
+release_mailto: LAIKA IT <it@lists.laika.com>
 project_dependencies: 
-  treequel: ~> 1.1.1
   thin: ">=1.0"
   sinatra: ">=1.0"
   json: ">=1.4.6"
+  treequel: "~> 1.3.2"
+  sequel: "~> 3.6.0"
+  sqlite3-ruby: "~> 1.2.4"
 project_summary: An experimental minimal Rubygems server
 version_file: gemserver.rb
 additional_pkgfiles: []
 
-required_ruby_version: ">=1.8.7"
 dev_dependencies: 
-  shotgun: ">=0"
+  shotgun: "~> 0.8"
 authors: 
   Michael Granger: ged@FaerieMUD.org
 post_install_message: |-
   To run the server, create a config.ru that includes something like:
-  
+
       require 'gemserver/app'
       require 'pathname'
       Gemserver::App.set :config, Pathname('/path/to/config.yml')
@@ -40,4 +39,5 @@ post_install_message: |-
   Then, start the server:
   
       rackup -s <your adapter of choice> -rubygems /path/to/config.ru
+      
 project_name: gemserver
