Starting converting the app to run from a gem.

--- a/config.ru.example
+++ b/config.ru.example
@@ -1,17 +1,6 @@
 #!/usr/bin/env rackup
 
-require 'fileutils'
-require 'pathname'
-require 'gemserver/app'
+require 'gemserver'
 
-basedir = Pathname( __FILE__ ).dirname
-logfile = basedir + 'log/sinatra.log'
-
-logfile.dirname.mkpath
-log = logfile.open( 'a' )
-$stdout.reopen( log )
-$stderr.reopen( log )
-
-Gemserver::App.set :configfile, basedir + 'config.yml'
 run Gemserver::App
 
