--- a/data/gemserver/gemserver.conf.example
+++ b/data/gemserver/gemserver.conf.example
@@ -1,3 +1,8 @@
+loglevel: debug
+rack:
+  host: 127.0.0.1
+  port: 9392
+  env: development
 gemserver:
   name: Acme
   gemsdir: /usr/local/var/rubygems
